--- a/about.html
+++ b/about.html
@@ -9,20 +9,20 @@
   <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" />
   <!-- fonts -->
-  <link rel="stylesheet" href="font/fonts.css">
+  <link rel="stylesheet" href="fonts.css">
   <!-- normalize css -->
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="normalize.css">
   <!-- custom css -->
-  <link rel="stylesheet" href="css/utility.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="utility.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   <!-- navbar -->
   <nav class="navbar">
     <div class="container flex">
       <a href="index.html" class="site-brand">
-        <img src="images/MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
+        <img src="assets/images/MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
       </a>
       <button type="button" id="navbar-show-btn" class="flex"><i class="fas fa-bars"></i></button>
       <div id="navbar-collapse">
@@ -41,7 +41,7 @@
   <!-- header -->
   <header class="flex">
     <video autoplay muted loop playsinline id="bgVideo">
-      <source src="videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+      <source src="assets/videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
     </video>
     <div class="header-content">
       <div class="container">
@@ -58,7 +58,7 @@
   <section id="about" class="py-4">
     <div class="container about-row">
       <div class="about-left my-2">
-        <img src="images/colorful-yarn-bins-textile-factory.jpg" alt="Maurifil Factory">
+        <img src="assets/images/colorful-yarn-bins-textile-factory.jpg" alt="Maurifil Factory">
       </div>
       <div class="about-right">
         <h2>Who We Are</h2>
@@ -123,6 +123,6 @@
   <!-- end footer -->
 
   <!-- js -->
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
