--- a/product.html
+++ b/product.html
@@ -9,11 +9,11 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous">
   <!-- custom fonts & css -->
-  <link rel="stylesheet" href="font/fonts.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/utility.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="utility.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
   <style>
     /* Color Picker CSS */
     .color-picker {
@@ -102,7 +102,7 @@
 
     <!-- Threads -->
     <div class="product-card threads">
-      <img src="assets/thread1.jpg" alt="Dyed Threads">
+      <img src="assets/images/thread1.jpg" alt="Dyed Threads">
       <h3>Dyed Threads</h3>
       <p>High-quality sustainable threads in vibrant colors.</p>
 
@@ -123,7 +123,7 @@
 
     <!-- Yarns -->
     <div class="product-card yarns">
-      <img src="assets/thread2.jpg" alt="Eco Yarns">
+      <img src="assets/images/thread2.jpg" alt="Eco Yarns">
       <h3>Dyed Yarns</h3>
       <p>Biodegradable fibers made with environmental care.</p>
 
@@ -144,7 +144,7 @@
 
     <!-- Custom -->
     <div class="product-card custom">
-      <img src="assets/thread3.jpg" alt="Custom Orders">
+      <img src="assets/images/thread3.jpg" alt="Custom Orders">
       <h3>Eco Dye</h3>
       <p>Tailored textile solutions for industrial and fashion clients.</p>
 
@@ -250,5 +250,6 @@
       });
     });
   </script>
+  <script src="script.js"></script>
 </body>
 </html>
