--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar">
     <div class="container flex">
       <a href="index.html" class="site-brand">
-        <img src="assets/images/MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
+        <img src="MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
       </a>
       <button type="button" id="navbar-show-btn" class="flex"><i class="fas fa-bars"></i></button>
       <div id="navbar-collapse">
