--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- header -->
   <header class="flex">
     <video autoplay muted loop playsinline id="bgVideo">
-      <source src="assets/videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+      <source src="videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
     </video>
     <div class="header-content">
       <div class="container">
@@ -57,7 +57,7 @@
   <!-- about/intro -->
   <div class="about-row">
     <div class="about-left my-2">
-      <img src="assets/images/scientific-petri-dish-holding-substance-filled-with-bacteria.jpg" alt="about img">
+      <img src="scientific-petri-dish-holding-substance-filled-with-bacteria.jpg" alt="about img">
     </div>
     <div class="about-right">
       <h2>About Maurifil</h2>
@@ -75,7 +75,7 @@
       <div class="services-row">
         <div class="services-item">
           <span class="services-icon">
-            <img src="assets/images/colorful-yarn-bins-textile-factory.jpg" alt="factory" />
+            <img src="colorful-yarn-bins-textile-factory.jpg" alt="factory" />
           </span>
           <h3>Who we are</h3>
           <p class="text">
@@ -86,7 +86,7 @@
 
         <div class="services-item">
           <span class="services-icon">
-            <img src="assets/images/close-up-image-lot-coils-with-threads-sewing-workshop.jpg" alt="factory" />
+            <img src="close-up-image-lot-coils-with-threads-sewing-workshop.jpg" alt="factory" />
           </span>
           <h3>What we do</h3>
           <p class="text">
@@ -111,7 +111,7 @@
         <div class="test-item">
           <p class="text">Maurifil has consistently delivered premium-quality threads that never disappoint. Their commitment to sustainability and innovation is inspiring.</p>
           <div class="test-item-info">
-            <img src="assets/images/kevin jean.jpg" alt="testimonial">
+            <img src="kevin jean.jpg" alt="testimonial">
             <div><h3>Kevin Jean</h3></div>
           </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="test-item">
           <p class="text">We’ve been working with Maurifil for years. Their yarns are durable, vibrant, and eco-friendly — perfect for our textile production needs.</p>
           <div class="test-item-info">
-            <img src="assets/images/David Mootoo.jpg" alt="testimonial">
+            <img src="David Mootoo.jpg" alt="testimonial">
             <div><h3>David Mootoo</h3></div>
           </div>
         </div>
@@ -127,7 +127,7 @@
         <div class="test-item">
           <p class="text">The level of professionalism and care Maurifil puts into every order is unmatched. They are true partners in our success.</p>
           <div class="test-item-info">
-            <img src="assets/images/emily yang.jpg" alt="testimonial">
+            <img src="emily yang.jpg" alt="testimonial">
             <div><h3>Emily Yang</h3></div>
           </div>
         </div>
@@ -140,7 +140,7 @@
   <section id="video">
     <div class="video-wrapper flex">
       <video loop>
-        <source src="assets/videos/plant.mp4" type="video/mp4">
+        <source src="plant.mp4" type="video/mp4">
       </video>
       <button type="button" id="play-btn"><i class="fas fa-play"></i></button>
     </div>
