--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <nav class="navbar">
     <div class="container flex">
       <a href="index.html" class="site-brand">
-        <img src="assets/images/MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
+        <img src="MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
       </a>
       <button type="button" id="navbar-show-btn" class="flex"><i class="fas fa-bars"></i></button>
       <div id="navbar-collapse">
@@ -41,7 +41,7 @@
   <!-- header -->
   <header class="flex">
     <video autoplay muted loop playsinline id="bgVideo">
-      <source src="assets/videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+      <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
     </video>
     <div class="header-content">
       <div class="container">
@@ -58,7 +58,7 @@
   <section id="about" class="py-4">
     <div class="container about-row">
       <div class="about-left my-2">
-        <img src="assets/images/colorful-yarn-bins-textile-factory.jpg" alt="Maurifil Factory">
+        <img src="colorful-yarn-bins-textile-factory.jpg" alt="Maurifil Factory">
       </div>
       <div class="about-right">
         <h2>Who We Are</h2>
