--- a/product.html
+++ b/product.html
@@ -59,7 +59,7 @@
    <nav class="navbar">
     <div class="container flex">
       <a href="index.html" class="site-brand">
-        <img src="images/MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
+        <img src="MAURIFIL LTD logo png-01.png" alt="Maurifil ltd" class="logo">
       </a>
       <button type="button" id="navbar-show-btn" class="flex"><i class="fas fa-bars"></i></button>
       <div id="navbar-collapse">
@@ -77,7 +77,7 @@
   <!-- Header -->
   <header class="flex">
     <video autoplay muted loop playsinline id="bgVideo">
-      <source src="videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+      <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
     </video>
     <div class="header-content">
       <div class="container">
@@ -102,7 +102,7 @@
 
     <!-- Threads -->
     <div class="product-card threads">
-      <img src="assets/images/thread1.jpg" alt="Dyed Threads">
+      <img src="thread1.jpg" alt="Dyed Threads">
       <h3>Dyed Threads</h3>
       <p>High-quality sustainable threads in vibrant colors.</p>
 
@@ -123,7 +123,7 @@
 
     <!-- Yarns -->
     <div class="product-card yarns">
-      <img src="assets/images/thread2.jpg" alt="Eco Yarns">
+      <img src="thread2.jpg" alt="Eco Yarns">
       <h3>Dyed Yarns</h3>
       <p>Biodegradable fibers made with environmental care.</p>
 
@@ -144,7 +144,7 @@
 
     <!-- Custom -->
     <div class="product-card custom">
-      <img src="assets/images/thread3.jpg" alt="Custom Orders">
+      <img src="thread3.jpg" alt="Custom Orders">
       <h3>Eco Dye</h3>
       <p>Tailored textile solutions for industrial and fashion clients.</p>
 
