--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- header -->
   <header class="flex">
     <video autoplay muted loop playsinline id="bgVideo">
-      <source src="videos/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+      <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
     </video>
     <div class="header-content">
       <div class="container">
